parser/ddl/createtable_parser.go
// Code generated from CreateTableParser.g4 by ANTLR 4.7.2. DO NOT EDIT.

package ddlparser // CreateTableParser
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "'='", "';'", "','", "'('", "')'", "'~'",
	"'!'", "'+'", "'-'",
}
var symbolicNames = []string{
	"", "AUTO_INCREMENT", "BIGINT", "BINARY", "BIT", "BLOB", "BTREE", "BOOLEAN",
	"BOOL", "CHARACTER", "CHARSET", "CHAR", "COLLATE", "COMMENT", "CONSTRAINT",
	"CREATE", "CURRENT_TIMESTAMP", "DATETIME", "DATE", "DECIMAL", "DEC", "DEFAULT",
	"DOUBLE", "ENGINE", "ENUM", "EXISTS", "FALSE", "FIXED", "FLOAT", "HASH",
	"INDEX", "IF", "INTEGER", "INT", "JSON", "KEY_BLOCK_SIZE", "KEY", "LOCALTIMESTAMP",
	"LOCALTIME", "LONGBLOB", "LONGTEXT", "MEDIUMBLOB", "MEDIUMINT", "MEDIUMTEXT",
	"NATIONAL", "NCHAR", "NOT", "NOW", "NULL", "NUMERIC", "NVARCHAR", "ON",
	"PARSER", "PRECISION", "PRIMARY", "REAL", "SERIAL", "SET", "SIGNED", "SMALLINT",
	"TABLE", "TEMPORARY", "TEXT", "TIMESTAMP", "TIME", "TINYBLOB", "TINYINT",
	"TINYTEXT", "TRUE", "UNIQUE", "UNSIGNED", "UPDATE", "USING", "VALUE", "VARBINARY",
	"VARCHAR", "VARYING", "WITH", "YEAR", "ZEROFILL", "Equal", "Semicolon",
	"Comma", "LeftParenthesis", "RightParenthesis", "Tilde", "Exclamation",
	"Plus", "Minus", "Integer", "Number", "FilesizeLiteral", "Literal", "PlaceholderString",
	"BackQuotedString", "RawString", "SPACE", "BLOCK_COMMENT", "LINE_COMMENT",
}

var ruleNames = []string{
	"root", "createTableDDL", "tableName", "ifNotExists", "createDefinitions",
	"createDefinition", "columnDefinition", "dataType", "lengthOneDimension",
	"lengthTwoDimension", "lengthTwoOptionalDimension", "collectionOptions",
	"columnConstraint", "nullNotNull", "comment", "defaultValue", "primaryKey",
	"unaryOperator", "constant", "currentTimestamp", "tableConstraint", "indexOption",
	"indexType", "indexColumnNames", "tableOption",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type CreateTableParser struct {
	*antlr.BaseParser
}

func NewCreateTableParser(input antlr.TokenStream) *CreateTableParser {
	this := new(CreateTableParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "CreateTableParser.g4"

	return this
}

// CreateTableParser tokens.
const (
	CreateTableParserEOF               = antlr.TokenEOF
	CreateTableParserAUTO_INCREMENT    = 1
	CreateTableParserBIGINT            = 2
	CreateTableParserBINARY            = 3
	CreateTableParserBIT               = 4
	CreateTableParserBLOB              = 5
	CreateTableParserBTREE             = 6
	CreateTableParserBOOLEAN           = 7
	CreateTableParserBOOL              = 8
	CreateTableParserCHARACTER         = 9
	CreateTableParserCHARSET           = 10
	CreateTableParserCHAR              = 11
	CreateTableParserCOLLATE           = 12
	CreateTableParserCOMMENT           = 13
	CreateTableParserCONSTRAINT        = 14
	CreateTableParserCREATE            = 15
	CreateTableParserCURRENT_TIMESTAMP = 16
	CreateTableParserDATETIME          = 17
	CreateTableParserDATE              = 18
	CreateTableParserDECIMAL           = 19
	CreateTableParserDEC               = 20
	CreateTableParserDEFAULT           = 21
	CreateTableParserDOUBLE            = 22
	CreateTableParserENGINE            = 23
	CreateTableParserENUM              = 24
	CreateTableParserEXISTS            = 25
	CreateTableParserFALSE             = 26
	CreateTableParserFIXED             = 27
	CreateTableParserFLOAT             = 28
	CreateTableParserHASH              = 29
	CreateTableParserINDEX             = 30
	CreateTableParserIF                = 31
	CreateTableParserINTEGER           = 32
	CreateTableParserINT               = 33
	CreateTableParserJSON              = 34
	CreateTableParserKEY_BLOCK_SIZE    = 35
	CreateTableParserKEY               = 36
	CreateTableParserLOCALTIMESTAMP    = 37
	CreateTableParserLOCALTIME         = 38
	CreateTableParserLONGBLOB          = 39
	CreateTableParserLONGTEXT          = 40
	CreateTableParserMEDIUMBLOB        = 41
	CreateTableParserMEDIUMINT         = 42
	CreateTableParserMEDIUMTEXT        = 43
	CreateTableParserNATIONAL          = 44
	CreateTableParserNCHAR             = 45
	CreateTableParserNOT               = 46
	CreateTableParserNOW               = 47
	CreateTableParserNULL              = 48
	CreateTableParserNUMERIC           = 49
	CreateTableParserNVARCHAR          = 50
	CreateTableParserON                = 51
	CreateTableParserPARSER            = 52
	CreateTableParserPRECISION         = 53
	CreateTableParserPRIMARY           = 54
	CreateTableParserREAL              = 55
	CreateTableParserSERIAL            = 56
	CreateTableParserSET               = 57
	CreateTableParserSIGNED            = 58
	CreateTableParserSMALLINT          = 59
	CreateTableParserTABLE             = 60
	CreateTableParserTEMPORARY         = 61
	CreateTableParserTEXT              = 62
	CreateTableParserTIMESTAMP         = 63
	CreateTableParserTIME              = 64
	CreateTableParserTINYBLOB          = 65
	CreateTableParserTINYINT           = 66
	CreateTableParserTINYTEXT          = 67
	CreateTableParserTRUE              = 68
	CreateTableParserUNIQUE            = 69
	CreateTableParserUNSIGNED          = 70
	CreateTableParserUPDATE            = 71
	CreateTableParserUSING             = 72
	CreateTableParserVALUE             = 73
	CreateTableParserVARBINARY         = 74
	CreateTableParserVARCHAR           = 75
	CreateTableParserVARYING           = 76
	CreateTableParserWITH              = 77
	CreateTableParserYEAR              = 78
	CreateTableParserZEROFILL          = 79
	CreateTableParserEqual             = 80
	CreateTableParserSemicolon         = 81
	CreateTableParserComma             = 82
	CreateTableParserLeftParenthesis   = 83
	CreateTableParserRightParenthesis  = 84
	CreateTableParserTilde             = 85
	CreateTableParserExclamation       = 86
	CreateTableParserPlus              = 87
	CreateTableParserMinus             = 88
	CreateTableParserInteger           = 89
	CreateTableParserNumber            = 90
	CreateTableParserFilesizeLiteral   = 91
	CreateTableParserLiteral           = 92
	CreateTableParserPlaceholderString = 93
	CreateTableParserBackQuotedString  = 94
	CreateTableParserRawString         = 95
	CreateTableParserSPACE             = 96
	CreateTableParserBLOCK_COMMENT     = 97
	CreateTableParserLINE_COMMENT      = 98
)

// CreateTableParser rules.
const (
	CreateTableParserRULE_root                       = 0
	CreateTableParserRULE_createTableDDL             = 1
	CreateTableParserRULE_tableName                  = 2
	CreateTableParserRULE_ifNotExists                = 3
	CreateTableParserRULE_createDefinitions          = 4
	CreateTableParserRULE_createDefinition           = 5
	CreateTableParserRULE_columnDefinition           = 6
	CreateTableParserRULE_dataType                   = 7
	CreateTableParserRULE_lengthOneDimension         = 8
	CreateTableParserRULE_lengthTwoDimension         = 9
	CreateTableParserRULE_lengthTwoOptionalDimension = 10
	CreateTableParserRULE_collectionOptions          = 11
	CreateTableParserRULE_columnConstraint           = 12
	CreateTableParserRULE_nullNotNull                = 13
	CreateTableParserRULE_comment                    = 14
	CreateTableParserRULE_defaultValue               = 15
	CreateTableParserRULE_primaryKey                 = 16
	CreateTableParserRULE_unaryOperator              = 17
	CreateTableParserRULE_constant                   = 18
	CreateTableParserRULE_currentTimestamp           = 19
	CreateTableParserRULE_tableConstraint            = 20
	CreateTableParserRULE_indexOption                = 21
	CreateTableParserRULE_indexType                  = 22
	CreateTableParserRULE_indexColumnNames           = 23
	CreateTableParserRULE_tableOption                = 24
)

// IRootContext is an interface to support dynamic dispatch.
type IRootContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRootContext differentiates from other interfaces.
	IsRootContext()
}

type RootContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRootContext() *RootContext {
	var p = new(RootContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CreateTableParserRULE_root
	return p
}

func (*RootContext) IsRootContext() {}

func NewRootContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RootContext {
	var p = new(RootContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CreateTableParserRULE_root

	return p
}

func (s *RootContext) GetParser() antlr.Parser { return s.parser }

func (s *RootContext) AllCreateTableDDL() []ICreateTableDDLContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ICreateTableDDLContext)(nil)).Elem())
	var tst = make([]ICreateTableDDLContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ICreateTableDDLContext)
		}
	}

	return tst
}

func (s *RootContext) CreateTableDDL(i int) ICreateTableDDLContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICreateTableDDLContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ICreateTableDDLContext)
}

func (s *RootContext) EOF() antlr.TerminalNode {
	return s.GetToken(CreateTableParserEOF, 0)
}

func (s *RootContext) AllSemicolon() []antlr.TerminalNode {
	return s.GetTokens(CreateTableParserSemicolon)
}

func (s *RootContext) Semicolon(i int) antlr.TerminalNode {
	return s.GetToken(CreateTableParserSemicolon, i)
}

func (s *RootContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RootContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RootContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CreateTableParserListener); ok {
		listenerT.EnterRoot(s)
	}
}

func (s *RootContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CreateTableParserListener); ok {
		listenerT.ExitRoot(s)
	}
}

func (p *CreateTableParser) Root() (localctx IRootContext) {
	localctx = NewRootContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, CreateTableParserRULE_root)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(50)
		p.CreateTableDDL()
	}
	p.SetState(55)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(51)
				p.Match(CreateTableParserSemicolon)
			}
			{
				p.SetState(52)
				p.CreateTableDDL()
			}

		}
		p.SetState(57)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())
	}
	p.SetState(59)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == CreateTableParserSemicolon {
		{
			p.SetState(58)
			p.Match(CreateTableParserSemicolon)
		}

	}
	{
		p.SetState(61)
		p.Match(CreateTableParserEOF)
	}

	return localctx
}

// ICreateTableDDLContext is an interface to support dynamic dispatch.
type ICreateTableDDLContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCreateTableDDLContext differentiates from other interfaces.
	IsCreateTableDDLContext()
}

type CreateTableDDLContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCreateTableDDLContext() *CreateTableDDLContext {
	var p = new(CreateTableDDLContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CreateTableParserRULE_createTableDDL
	return p
}

func (*CreateTableDDLContext) IsCreateTableDDLContext() {}

func NewCreateTableDDLContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CreateTableDDLContext {
	var p = new(CreateTableDDLContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CreateTableParserRULE_createTableDDL

	return p
}

func (s *CreateTableDDLContext) GetParser() antlr.Parser { return s.parser }

func (s *CreateTableDDLContext) CREATE() antlr.TerminalNode {
	return s.GetToken(CreateTableParserCREATE, 0)
}

func (s *CreateTableDDLContext) TABLE() antlr.TerminalNode {
	return s.GetToken(CreateTableParserTABLE, 0)
}

func (s *CreateTableDDLContext) TableName() ITableNameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITableNameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITableNameContext)
}

func (s *CreateTableDDLContext) CreateDefinitions() ICreateDefinitionsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICreateDefinitionsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICreateDefinitionsContext)
}

func (s *CreateTableDDLContext) TEMPORARY() antlr.TerminalNode {
	return s.GetToken(CreateTableParserTEMPORARY, 0)
}

func (s *CreateTableDDLContext) IfNotExists() IIfNotExistsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIfNotExistsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIfNotExistsContext)
}

func (s *CreateTableDDLContext) AllTableOption() []ITableOptionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ITableOptionContext)(nil)).Elem())
	var tst = make([]ITableOptionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ITableOptionContext)
		}
	}

	return tst
}

func (s *CreateTableDDLContext) TableOption(i int) ITableOptionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITableOptionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ITableOptionContext)
}

func (s *CreateTableDDLContext) AllComma() []antlr.TerminalNode {
	return s.GetTokens(CreateTableParserComma)
}

func (s *CreateTableDDLContext) Comma(i int) antlr.TerminalNode {
	return s.GetToken(CreateTableParserComma, i)
}

func (s *CreateTableDDLContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CreateTableDDLContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CreateTableDDLContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CreateTableParserListener); ok {
		listenerT.EnterCreateTableDDL(s)
	}
}

func (s *CreateTableDDLContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CreateTableParserListener); ok {
		listenerT.ExitCreateTableDDL(s)
	}
}

func (p *CreateTableParser) CreateTableDDL() (localctx ICreateTableDDLContext) {
	localctx = NewCreateTableDDLContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, CreateTableParserRULE_createTableDDL)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(63)
		p.Match(CreateTableParserCREATE)
	}
	p.SetState(65)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == CreateTableParserTEMPORARY {
		{
			p.SetState(64)
			p.Match(CreateTableParserTEMPORARY)
		}

	}
	{
		p.SetState(67)
		p.Match(CreateTableParserTABLE)
	}
	p.SetState(69)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == CreateTableParserIF {
		{
			p.SetState(68)
			p.IfNotExists()
		}

	}
	{
		p.SetState(71)
		p.TableName()
	}
	{
		p.SetState(72)
		p.CreateDefinitions()
	}
	p.SetState(83)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<CreateTableParserAUTO_INCREMENT)|(1<<CreateTableParserCHARACTER)|(1<<CreateTableParserCHARSET)|(1<<CreateTableParserCOLLATE)|(1<<CreateTableParserCOMMENT)|(1<<CreateTableParserDEFAULT)|(1<<CreateTableParserENGINE))) != 0 {
		{
			p.SetState(73)
			p.TableOption()
		}
		p.SetState(80)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<CreateTableParserAUTO_INCREMENT)|(1<<CreateTableParserCHARACTER)|(1<<CreateTableParserCHARSET)|(1<<CreateTableParserCOLLATE)|(1<<CreateTableParserCOMMENT)|(1<<CreateTableParserDEFAULT)|(1<<CreateTableParserENGINE))) != 0) || _la == CreateTableParserComma {
			p.SetState(75)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			if _la == CreateTableParserComma {
				{
					p.SetState(74)
					p.Match(CreateTableParserComma)
				}

			}
			{
				p.SetState(77)
				p.TableOption()
			}

			p.SetState(82)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}

	}

	return localctx
}

// ITableNameContext is an interface to support dynamic dispatch.
type ITableNameContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTableNameContext differentiates from other interfaces.
	IsTableNameContext()
}

type TableNameContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTableNameContext() *TableNameContext {
	var p = new(TableNameContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CreateTableParserRULE_tableName
	return p
}

func (*TableNameContext) IsTableNameContext() {}

func NewTableNameContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TableNameContext {
	var p = new(TableNameContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CreateTableParserRULE_tableName

	return p
}

func (s *TableNameContext) GetParser() antlr.Parser { return s.parser }

func (s *TableNameContext) BackQuotedString() antlr.TerminalNode {
	return s.GetToken(CreateTableParserBackQuotedString, 0)
}

func (s *TableNameContext) RawString() antlr.TerminalNode {
	return s.GetToken(CreateTableParserRawString, 0)
}

func (s *TableNameContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TableNameContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TableNameContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CreateTableParserListener); ok {
		listenerT.EnterTableName(s)
	}
}

func (s *TableNameContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CreateTableParserListener); ok {
		listenerT.ExitTableName(s)
	}
}

func (p *CreateTableParser) TableName() (localctx ITableNameContext) {
	localctx = NewTableNameContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, CreateTableParserRULE_tableName)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(85)
		_la = p.GetTokenStream().LA(1)

		if !(_la == CreateTableParserBackQuotedString || _la == CreateTableParserRawString) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IIfNotExistsContext is an interface to support dynamic dispatch.
type IIfNotExistsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsIfNotExistsContext differentiates from other interfaces.
	IsIfNotExistsContext()
}

type IfNotExistsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyIfNotExistsContext() *IfNotExistsContext {
	var p = new(IfNotExistsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CreateTableParserRULE_ifNotExists
	return p
}

func (*IfNotExistsContext) IsIfNotExistsContext() {}

func NewIfNotExistsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *IfNotExistsContext {
	var p = new(IfNotExistsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CreateTableParserRULE_ifNotExists

	return p
}

func (s *IfNotExistsContext) GetParser() antlr.Parser { return s.parser }

func (s *IfNotExistsContext) IF() antlr.TerminalNode {
	return s.GetToken(CreateTableParserIF, 0)
}

func (s *IfNotExistsContext) NOT() antlr.TerminalNode {
	return s.GetToken(CreateTableParserNOT, 0)
}

func (s *IfNotExistsContext) EXISTS() antlr.TerminalNode {
	return s.GetToken(CreateTableParserEXISTS, 0)
}

func (s *IfNotExistsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IfNotExistsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *IfNotExistsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CreateTableParserListener); ok {
		listenerT.EnterIfNotExists(s)
	}
}

func (s *IfNotExistsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CreateTableParserListener); ok {
		listenerT.ExitIfNotExists(s)
	}
}

func (p *CreateTableParser) IfNotExists() (localctx IIfNotExistsContext) {
	localctx = NewIfNotExistsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, CreateTableParserRULE_ifNotExists)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(87)
		p.Match(CreateTableParserIF)
	}
	{
		p.SetState(88)
		p.Match(CreateTableParserNOT)
	}
	{
		p.SetState(89)
		p.Match(CreateTableParserEXISTS)
	}

	return localctx
}

// ICreateDefinitionsContext is an interface to support dynamic dispatch.
type ICreateDefinitionsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCreateDefinitionsContext differentiates from other interfaces.
	IsCreateDefinitionsContext()
}

type CreateDefinitionsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCreateDefinitionsContext() *CreateDefinitionsContext {
	var p = new(CreateDefinitionsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CreateTableParserRULE_createDefinitions
	return p
}

func (*CreateDefinitionsContext) IsCreateDefinitionsContext() {}

func NewCreateDefinitionsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CreateDefinitionsContext {
	var p = new(CreateDefinitionsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CreateTableParserRULE_createDefinitions

	return p
}

func (s *CreateDefinitionsContext) GetParser() antlr.Parser { return s.parser }

func (s *CreateDefinitionsContext) LeftParenthesis() antlr.TerminalNode {
	return s.GetToken(CreateTableParserLeftParenthesis, 0)
}

func (s *CreateDefinitionsContext) AllCreateDefinition() []ICreateDefinitionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ICreateDefinitionContext)(nil)).Elem())
	var tst = make([]ICreateDefinitionContext, len(ts))
